removed references to Bowie

--- a/static/about.html
+++ b/static/about.html
@@ -1,17 +1,16 @@
 <html>
 
 <head>
-  <title>Ziggy - Bowie Personas through lyric analysis</title>
+  <title>Ziggy - Personas through lyric analysis</title>
   <link rel="stylesheet" href="./stylesheets/main.css">
 </head>
 
 <body class="ziggy comparison">
   <div class="compare">
-    <!--        <div class="trim"></div>-->
     <div class="bar">
       <a href="../">
         <div class="title">
-          <img class="blackstar" src="./images/bs.png">
+          <img class="" src="generated/images/logo.png">
         </div>
       </a>
     </div>
