--- a/static/comparison.html
+++ b/static/comparison.html
@@ -1,11 +1,9 @@
 <html>
 
 <head>
-  <title>Ziggy | Comparison of Bowie Lyrics | Big Five Psychology</title>
-  <!--    <link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>-->
+  <title>Ziggy | Comparison of Lyrics | Big Five Psychology</title>
   <link rel="stylesheet" href="./stylesheets/main.css">
-  <meta name="keywords" content="bowie, david-bowie, ziggy-stardust, lazarus, thin-white-duke, major-tom, big-5, psychology-in-music">
-  <meta name="description" content="Pshychological Analysis of David Bowies Lyrics">
+  <meta name="description" content="Psychological Analysis of Lyrics">
 </head>
 
 <body class="ziggy">
@@ -13,7 +11,7 @@
     <div class="bar">
       <a href="../">
         <div class="title">
-          <img class="blackstar" src="./images/bs.png">
+          <img class="" src="generated/images/logo.png">
         </div>
       </a>
     </div>
@@ -21,8 +19,8 @@
   <div class='charts'>
     <div class="context">
       <div class="chartinfo">
-        <p>These charts plot the <a href="http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/personality-insights.html">big five personality traits</a> from the lyrics of albums related to <a href="https://en.wikipedia.org/wiki/David_Bowie">David Bowie's personas</a> over time. There is one card for each trait, and a picker within each card that allows comparison of contributing factors. You can toggle between viewing the data by persona, or by time.
-          <p>You can add your own thoughts below.</p>
+        <p>These charts plot the <a href="http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/personality-insights.html">
+          big five personality traits</a> from the lyrics of albums over time. There is one card for each trait, and a picker within each card that allows comparison of contributing factors. You can toggle between viewing the data by persona, or by time.
       </div>
       <div class="onoffswitch">
         <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="onoffswitch1" checked="" on onchange="toggleChart(this)">
@@ -85,9 +83,10 @@
 
   <script src="generated/personas.js"></script>
   <script src="generated/combined.js"></script>
-  
+
   <script src="./javascript/Chart.min.js "></script>
   <script src="./javascript/comparison.js "></script>
 
 </body>
+
 </html>
