--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,11 @@
 <html>
 
 <head>
-  <title>Ziggy | Bowie Personas through lyric analysis | Psychology of lyrics</title>
+  <title>Ziggy | Personas through lyric analysis | Psychology of lyrics</title>
 
   <link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/main.css">
-  <meta name="keywords" content="bowie, ziggy-stardust, lazarus, thin-white-duke, major-tom, big-5, psychology-in-music">
-  <meta name="description" content="Psychology Analysis of David Bowies Lyrics">
+  <meta name="description" content="Psychology Analysis of Lyrics">
 </head>
 
 <body class="ziggy">
@@ -14,8 +13,7 @@
     <div class="bar">
       <a href=".">
         <div class="title">
-          <img class="blackstar" src="images/bs.png">
-          <!--                    <div class="name">Bowie Personas</div>-->
+          <img src="generated/images/logo.png">
         </div>
       </a>
     </div>
