--- a/static/personality.html
+++ b/static/personality.html
@@ -1,21 +1,17 @@
 <html>
 
 <head>
-  <title>Bowie Persona | Big Five Psychology | Bowie Lyric Analysis</title>
+  <title>Persona | Big Five Psychology | Lyric Analysis</title>
   <link rel="stylesheet" type="text/css" href="./stylesheets/personality.css" />
-  <meta name="keywords" content="bowie, david-bowie, ziggy-stardust, lazarus, thin-white-duke, major-tom, big-5, psychology-in-music">
-  <meta name="description" content="Psychology Analysis of David Bowies Lyrics">
+  <meta name="description" content="Psychology Analysis of Lyrics">
 </head>
 
 <body class="persona" onload="drawChart()">
   <div id="fb-root"></div>
   <div class="banner">
     <div class="home" onClick="window.open('../../');"><img class="homeicon" src="images/home.svg">Home</div>
-    <div class="title"><img class="blackstar" src="images/bs.png"> </div>
+    <div class="title"><img class="blackstar" src="generated/images/logo.png"> </div>
     <div class="social">
-      <div class="twit">
-        <a href="https://twitter.com/share" class="twitter-share-button" data-via="antonmc" data-hashtags="BowiePersona">Tweet</a></div>
-      <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
     </div>
   </div>
 
@@ -58,7 +54,6 @@
   <div class="columns">
     <div class="left">
       <div id="personaName" class="personaName"></div>
-      <div id="twitterName" class="twitterName">by @antonmc</div>
       <div id="description" class="description"></div>
       <div class="location"><img class="map" src="images/location.svg">
         <div class="place" id="location"></div>
@@ -89,7 +84,7 @@
             <div class="fromName"> - </div>
             <div class="fromName">Mar 29</div>
           </div>
-          <div class="tweetContent">The following diagrams are a psychological analyis of the lyrics in Bowie's albums. <a target="_blank" href="http://www.azlyrics.com/b/bowie.html#2204">You can explore his lyrics here</a>
+          <div class="tweetContent">The following diagrams are a psychological analyis of the lyrics.
           </div>
         </div>
       </div>
@@ -105,7 +100,7 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script type="text/javascript" src="//www.gstatic.com/charts/loader.js"></script>
   <script src="generated/personas.js"></script>
   <script src="generated/combined.js"></script>
   <script src="javascript/personality.js"></script>
