--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
   </div>
   <div class="navigation">
     <div class="nav-element" title="Analytics" onclick="compare()"><img class="nav-image" src="images/chart.svg"></div>
-<!--    <div class="nav-element" title="Your Persona" onclick="persona()"><img class="nav-image" src="images/persona.svg"></div>-->
+    <div class="nav-element" title="Your Persona" onclick="persona()"><img class="nav-image" src="images/persona.svg"></div>
     <div class="nav-element" title="About this project" onclick="about()"><img class="nav-image" src="images/idea.svg"></div>
   </div>
 
@@ -36,4 +36,5 @@
   <script src="javascript/carousel.js"></script>
 
 </body>
+
 </html>
